# Copyright 2026 The llzk-to-shlo Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@bazel_skylib//rules:expand_template.bzl", "expand_template")

package(
    default_visibility = ["//visibility:public"],
)

expand_template(
    name = "lit_site_cfg",
    out = "lit.site.cfg.py",
    substitutions = {
        "@LLVM_TOOLS_DIR@": "external/llvm-project/llvm",
        "@LLZK_TO_SHLO_TOOLS_DIR@": "tools",
    },
    template = "lit.site.cfg.py.in",
)

sh_test(
    name = "lit_tests",
    srcs = ["run_lit.sh"],
    data = [
        "lit.cfg.py",
        ":lit_site_cfg",
        "//tests/Conversion/BatchStablehlo:test_files",
        "//tests/Conversion/LlzkToStablehlo:test_files",
        "//tests/Conversion/VerifyWitnessLayout:test_files",
        "//tests/Dialect/WLA:test_files",
        "//tools:llzk-to-shlo-opt",
        "@llvm-project//llvm:FileCheck",
        "@llvm-project//llvm:lit",
        "@llvm-project//llvm:not",
    ],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

# Batch StableHLO E2E regression test.
# Tests circom → LLZK (concrete) → StableHLO → batch-stablehlo for all
# compilable circuits in circom-benchmarks. Verifies conversion counts
# don't regress (currently: 30 StableHLO, 28 Batch).
# Requires: llzk-circom (set CIRCOM_PATH env or ensure circom is in PATH).
sh_test(
    name = "batch_e2e_tests",
    size = "large",
    timeout = "long",
    srcs = ["batch_e2e_test.sh"],
    data = [
        "//tools:llzk-to-shlo-opt",
        "@circom",
        "@circom_benchmarks//:all_circom",
    ],
    tags = [
        "circom",
        "manual",  # Full suite: 900s+ circom compilation. Run locally.
    ],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

# Batch StableHLO smoke test (CI-friendly).
# Tests a representative subset of circuits without circom compilation
# by using inline LLZK IR. Runs in ~30s.
sh_test(
    name = "batch_smoke_tests",
    srcs = ["batch_smoke_test.sh"],
    data = [
        "//tools:llzk-to-shlo-opt",
    ],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

# Witness correctness test.
# Verifies GPU single vs batch execution produce identical results for all
# compilable circuits. Requires GPU + stablehlo_runner + llzk-circom.
sh_test(
    name = "witness_correctness_tests",
    size = "enormous",
    srcs = ["witness_correctness_test.sh"],
    data = [
        "//tools:llzk-to-shlo-opt",
    ],
    local = True,  # Needs GPU access
    tags = [
        "circom",
        "gpu",
    ],
)

# GPU semantic verification tests.
# Uses stablehlo_runner from open-zkx (built with --config=cuda_clang).
# Excluded by default via --test_tag_filters=-gpu in .bazelrc.
# Included in CI/local via .bazelrc.ci / .bazelrc.user.
sh_test(
    name = "gpu_semantic_tests",
    srcs = ["gpu_semantic_test.sh"],
    data = [
        "//tools:llzk-to-shlo-opt",
        "@open_zkx//zkx/tools/stablehlo_runner:stablehlo_runner_main",
    ],
    local = True,  # Needs GPU access (not sandboxed)
    tags = ["gpu"],
)
