# Copyright 2026 The llzk-to-shlo Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@rules_cc//cc:defs.bzl", "cc_binary")

package(
    default_visibility = ["//visibility:public"],
)

cc_binary(
    name = "llzk-to-shlo-opt",
    srcs = ["llzk-to-shlo-opt.cpp"],
    deps = [
        "//llzk_to_shlo/Conversion/BatchStablehlo",
        "//llzk_to_shlo/Conversion/LlzkToStablehlo",
        "//llzk_to_shlo/Conversion/LlzkToStablehlo:SimplifySubComponents",
        "//llzk_to_shlo/Conversion/VerifyWitnessLayout",
        "//llzk_to_shlo/Conversion/WitnessLayoutAnchor",
        "//llzk_to_shlo/Dialect/WLA",
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:AllPassesAndDialects",
        "@llvm-project//mlir:ArithDialect",
        "@llvm-project//mlir:FuncDialect",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:MlirOptLib",
        "@llvm-project//mlir:Pass",
        "@llvm-project//mlir:Support",
        "@llvm-project//mlir:TensorDialect",
        "@llzk//:LLZKDialects",
        "@prime_ir//prime_ir/Dialect/EllipticCurve/IR:EllipticCurve",
        "@prime_ir//prime_ir/Dialect/Field/IR:Field",
        "@prime_ir//prime_ir/Dialect/ModArith/IR:ModArith",
        "@stablehlo//stablehlo/dialect:register",
    ],
)

cc_binary(
    name = "witness_layout_audit",
    srcs = ["witness_layout_audit.cc"],
    deps = [
        "//llzk_to_shlo/Conversion/LlzkToStablehlo:TypeConversion",
        "//llzk_to_shlo/Util:WitnessChunkWalker",
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:ArithDialect",
        "@llvm-project//mlir:FuncDialect",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Parser",
        "@llvm-project//mlir:Support",
        "@llvm-project//mlir:TensorDialect",
        "@prime_ir//prime_ir/Dialect/Field/IR:Field",
        "@stablehlo//stablehlo/dialect:register",
    ],
)
